--- a/harmoneats/app/src/main/AndroidManifest.xml
+++ b/harmoneats/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
         <activity android:name=".Login"></activity>
         <activity android:name=".Register">
             <intent-filter>
@@ -26,7 +27,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".VerifyPhoneActivity">
+        <activity android:name=".VerifyEmailActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
 
